ubiquity (2.11.19) UNRELEASED; urgency=low

  [ Colin Watson ]
  * Simplify DebconfFilter.process_line slightly.
  * Simplify KeyboardNames._load_file using collections.defaultdict.

  [ Dmitrijs Ledkovs ]
  * Make the UI layout test print the failed page/step name.
  * Add crypt security key setup page and move crypt/lvm checkboxes to the
    ask page.

 -- Dmitrijs Ledkovs <dmitrij.ledkov@ubuntu.com>  Wed, 01 Aug 2012 15:02:14 +0100

ubiquity (2.11.18) quantal; urgency=low

  * Don't bother keeping track of keyboard model names and identifiers, as
    nothing in ubiquity uses them right now.
  * Fix reversed uses of methods mapping between keyboard layout/variant IDs
    and human-readable names, and improve method naming and documentation to
    make this mistake less likely in future (LP: #1027207, #1027620).
  * Automatic update of included source packages: debian-installer-utils
    1.91ubuntu3, flash-kernel 3.0~rc.4ubuntu9, netcfg 1.68ubuntu15.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 23 Jul 2012 11:02:13 +0100

ubiquity (2.11.17) quantal; urgency=low

  * ubiquity/plugins/ubi-partman.py: Remove a stray comma, which broke this
    plugin.
  * Parse a compact representation of keyboard layouts and variants on the
    fly, rather than building them all into a giant static Python module.
    This is much more memory-efficient.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 19 Jul 2012 11:09:16 +0100

ubiquity (2.11.16) quantal; urgency=low

  [ Dmitrijs Ledkovs ]
  * Add experimental auto-lvm recipe
  * Automatic update of included source packages: partman-auto-lvm
    44ubuntu1.
  * Update translation templates.

  [ Colin Watson ]
  * Add a --no-webcam option to disable the webcam page.
  * Make all Python code pass pep8(1), and add a test to enforce this.
  * Automatic update of included source packages: flash-kernel
    3.0~rc.4ubuntu7, partman-lvm 79ubuntu2.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 18 Jul 2012 15:47:16 +0100
